# digma.github.io

./: .gitignore  .prettierignore  CNAME  Gemfile  README.md  _config.yml  about.md  astro.config.mjs  blog.md  index.html  main.css  package-lock.json  package.json  rsw.toml  tailwind.config.mjs
_data/: author.json  social.json
_includes/: footer.html  google_analytics.html  header.html
_layouts/: blog.html
_old/: index.html
_posts/: 2023-03-31-coming-soon.md
_sass/: _content.scss  _general.scss  _old-content.scss  _site-footer.scss  _site-header.scss
assets/css/: style.scss
assets/js/: custom.js
crates/nannou-simple/: Cargo.toml
crates/nannou-simple/src/: lib.rs  main.rs  sketch.rs
public/: robots.txt
src/: consts.ts
src/components/: BaseHead.astro  Footer.astro  Header.astro  HeaderLink.astro  Prose.astro
src/components/charts/: LogoChart.astro  SkillChartBusiness.astro  SkillChartTech.astro
src/components/elements/: Card.astro  SkillCards.astro
src/content/: config.ts
src/content/blog/: aws-bearer-token-auth.mdx  dataviz-mentor.mdx  intro_to_rust.mdx  markdown-style-guide.md  our-world-in-data-matplotlib.mdx  pc-gamer-industry-layoff-plot-in-matplotlib.mdx  reclaim-personality-with-chatgpt.mdx
src/content/products/: dataviz-mentor.mdx  findyourchatai.mdx
src/layouts/: BaseLayout.astro  BlogPost.astro
src/pages/: about.astro  index.astro  nannousimple.astro  test.astro
src/pages/blog/: [...slug].astro  index.astro
src/pages/products/: [...slug].astro  index.astro
src/styles/: global.css
