[package]
name = "nannou-simple"
version = "0.1.0"
edition = "2021"
description = "A simple nannou web application using wasm"
categories = ["wasm"]
resolver = "2"


[[bin]]
name = "nannou_simple_web"
path = "src/main.rs"

[lib]
name = "nannou_simple"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
async-std = "1.12.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"

# Need a special version with wasm
[dependencies.nannou]
version = "0.18.1"
git = "https://github.com/nannou-org/nannou.git"
rev = "287be8a4d075b17332ca0bf34649f5d25e751c00"
features = [
    "wasm-experimental",
]

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.57"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.1.27"
js-sys = "0.3.22"
